gerador_roteiros/tests/testfiles/0.9.0/rngvalidation/invalid/cenarios_sem_passos.mm
<map version="0.9.0">
<!-- To view this file, download free mind mapping software FreeMind from http://freemind.sourceforge.net -->
<node CREATED="1346671927699" ID="ID_1360472608" MODIFIED="1346671930826" TEXT="MM">
<node CREATED="1346671931690" ID="ID_277377995" MODIFIED="1346671949429" POSITION="right" TEXT="UC: UC1&#xa;Requisitos: REQ001&#xa;Pr&#xe9;-condi&#xe7;&#xf5;es: PRE1&#xa;P&#xf3;s-condi&#xe7;&#xf5;es: POS1"/>
<node CREATED="1346671954711" ID="ID_1281441590" MODIFIED="1346671969308" POSITION="right" TEXT="UC: UC2&#xa;Requisitos: REQ002&#xa;Pr&#xe9;-condi&#xe7;&#xf5;es: PRE1&#xa;P&#xf3;s-condi&#xe7;&#xf5;es: POS2"/>
</node>
</map>
